more adjustments to menu icon on mobile because new Safari on iOS15 was having issues doing the animation properly

--- a/scss/_hamburger.scss
+++ b/scss/_hamburger.scss
@@ -35,134 +35,6 @@
   transition: .25s ease-in-out;
 }
 
-#nav-icon1 {
-  span {
-    &:nth-child(1) {
-      top: 0px;
-    }
-
-    &:nth-child(2) {
-      top: 9px;
-    }
-
-    &:nth-child(3) {
-      top: 18px;
-    }
-  }
-
-  &.open span {
-    &:nth-child(1) {
-      top: 18px;
-      -webkit-transform: rotate(135deg);
-      -moz-transform: rotate(135deg);
-      -o-transform: rotate(135deg);
-      transform: rotate(135deg);
-    }
-
-    &:nth-child(2) {
-      opacity: 0;
-      left: -60px;
-    }
-
-    &:nth-child(3) {
-      top: 18px;
-      -webkit-transform: rotate(-135deg);
-      -moz-transform: rotate(-135deg);
-      -o-transform: rotate(-135deg);
-      transform: rotate(-135deg);
-    }
-  }
-}
-
-/* Icon 2 */
-
-#nav-icon2 {
-  span {
-    display: block;
-    position: absolute;
-    height: 4.5px;
-    width: 50%;
-    background: $text-color;
-    opacity: 1;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
-
-    &:nth-child(even) {
-      left: 50%;
-      border-radius: 0 9px 9px 0;
-    }
-
-    &:nth-child(odd) {
-      left: 0px;
-      border-radius: 9px 0 0 9px;
-    }
-
-    &:nth-child(1), &:nth-child(2) {
-      top: 0px;
-    }
-
-    &:nth-child(3), &:nth-child(4) {
-      top: 9px;
-    }
-
-    &:nth-child(5), &:nth-child(6) {
-      top: 18px;
-    }
-  }
-
-  &.open span {
-    &:nth-child(1), &:nth-child(6) {
-      -webkit-transform: rotate(45deg);
-      -moz-transform: rotate(45deg);
-      -o-transform: rotate(45deg);
-      transform: rotate(45deg);
-    }
-
-    &:nth-child(2), &:nth-child(5) {
-      -webkit-transform: rotate(-45deg);
-      -moz-transform: rotate(-45deg);
-      -o-transform: rotate(-45deg);
-      transform: rotate(-45deg);
-    }
-
-    &:nth-child(1) {
-      left: 5px;
-      top: 7px;
-    }
-
-    &:nth-child(2) {
-      left: calc(50% - 5px);
-      top: 7px;
-    }
-
-    &:nth-child(3) {
-      left: -50%;
-      opacity: 0;
-    }
-
-    &:nth-child(4) {
-      left: 100%;
-      opacity: 0;
-    }
-
-    &:nth-child(5) {
-      left: 5px;
-      top: 29px;
-    }
-
-    &:nth-child(6) {
-      left: calc(50% - 5px);
-      top: 29px;
-    }
-  }
-}
-
 /* Icon 3 */
 
 .hamburger {
@@ -182,9 +54,10 @@
 
   &.open span {
     &:nth-child(1) {
-      top: 18px;
+      /*top: 9px;
       width: 0%;
-      left: 50%;
+      left: 50%;*/
+      opacity: 0;
     }
 
     &:nth-child(2) {
@@ -202,64 +75,18 @@
     }
 
     &:nth-child(4) {
-      top: 18px;
+      /*top: 9px;
       width: 0%;
-      left: 50%;
+      left: 50%;*/
+      opacity: 0;
     }
   }
 }
 
-/* Icon 4 */
+.hamburger span:nth-child(1), .hamburger span:nth-child(4) {
+  transition-delay: .2s;
+}
 
-#nav-icon4 {
-  span {
-    &:nth-child(1) {
-      top: 0px;
-      -webkit-transform-origin: left center;
-      -moz-transform-origin: left center;
-      -o-transform-origin: left center;
-      transform-origin: left center;
-    }
-
-    &:nth-child(2) {
-      top: 9px;
-      -webkit-transform-origin: left center;
-      -moz-transform-origin: left center;
-      -o-transform-origin: left center;
-      transform-origin: left center;
-    }
-
-    &:nth-child(3) {
-      top: 18px;
-      -webkit-transform-origin: left center;
-      -moz-transform-origin: left center;
-      -o-transform-origin: left center;
-      transform-origin: left center;
-    }
-  }
-
-  &.open span {
-    &:nth-child(1) {
-      -webkit-transform: rotate(45deg);
-      -moz-transform: rotate(45deg);
-      -o-transform: rotate(45deg);
-      transform: rotate(45deg);
-      top: -3px;
-      left: 8px;
-    }
-
-    &:nth-child(2) {
-      width: 0%;
-      opacity: 0;
-    }
-
-    &:nth-child(3) {
-      -webkit-transform: rotate(-45deg);
-      -moz-transform: rotate(-45deg);
-      -o-transform: rotate(-45deg);
-      transform: rotate(-45deg);
-      top: 39px;
-      left: 8px;
-    }
-  }
+.hamburger.open span:nth-child(1), .hamburger.open span:nth-child(4) {
+    transition-delay: 0s;
 }
